--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -53,7 +53,9 @@ summary::-webkit-details-marker {
 summary {
   list-style: none;
 }
-
+address {
+  font-style: normal;
+}
 //-----------------------
 // Background sections ==================
 .backgr {
