--- a/src/scss/sertificate.scss
+++ b/src/scss/sertificate.scss
@@ -62,6 +62,11 @@
           transform: translate(rem(5), rem(-5));
           filter: invert(28%) sepia(95%) saturate(1724%) hue-rotate(211deg) brightness(95%) contrast(103%);
         }
+        .item-sertificate__img-ibg {
+          img {
+            filter: grayscale(0);
+          }
+        }
       }
 
     @media (max-width:$mobileSmall){
