--- a/src/scss/systems.scss
+++ b/src/scss/systems.scss
@@ -510,6 +510,7 @@
 	}
 }
   // -- SYSTEM SPOLLER -----------------------------------------------------
+
 .system-spoller {
   &:not(:last-child) {
     @include adaptiveValue("margin-bottom", 90, 67);
@@ -617,6 +618,7 @@
           }
         }
       }
+
       .system-spoller__body {
         @media (max-width:em(580)){
           flex-direction: column; 
@@ -642,7 +644,11 @@
            max-width: 60%; 
         }
       }
-      
+      .system-spoller__img-ibg {
+        &.system-spoller-num-08 {
+          width: 21%;
+        }
+      }
     }
     &:nth-child(9) {
       .system-spoller__texts-body {
@@ -674,6 +680,29 @@
         max-width: rem(470);
         @media (max-width:$mobileSmall){
            max-width: 100%; 
+        }
+      }
+      .sertificate-gallery {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        @media (max-width:$mobileSmall){
+           flex-direction: row;
+           column-gap: rem(20); 
+        }
+        .system-spoller__img-ibg {
+          display: block;
+          max-width: rem(324);
+          @media (max-width:$mobileSmall){
+             max-width: unset; 
+             width: 100%;
+          }
+          &:not(:last-child) {
+            margin-bottom: rem(20);
+            @media (max-width:$mobileSmall){
+               margin-bottom: 0; 
+            }
+          }
         }
       }
     }
@@ -779,4 +808,51 @@
       @include adaptiveValue("margin-bottom", 9, 12);
     }
 	}
+}
+
+
+.page-system-01 {
+  .system-spoller__item {
+    &:nth-child(1) {
+      .system-spoller__images-body {
+           padding-top: unset; 
+      }
+    }
+    &:nth-child(2) {
+      .system-spoller__img-ibg {
+        width: 85%;
+      }
+    }
+    &:nth-child(3) {
+      .system-spoller__img-ibg {
+        width: 55%;
+      }
+    }
+  }
+}
+
+.page-system-03 {
+  .system__img-ibg {
+    overflow: hidden;
+    height: 100%;
+    max-height: rem(378);
+  }
+}
+.page-system-04 {
+  .system__img-ibg {
+    overflow: hidden;
+    height: 100%;
+    max-height: rem(378);
+    img {
+      height: 116%;
+      @media (max-width: em(950)){
+          height: 100%;
+      }
+    }
+  }
+  .descrp-syst__img-ibg {
+    @media (max-width: em(600)){
+        margin: rem(20) auto;
+    }
+  }
 }
