--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -15,7 +15,7 @@
 		box-shadow: 0px 0px 1px 1px rgba(123, 148, 157, 0.50);
 	}
 	&._open-menu-sub {
-		background-color: rgba(26, 26, 26, 1);
+		// background-color: rgba(26, 26, 26, 1);
 		
 		&::before {
 			opacity: 1;
@@ -301,6 +301,8 @@
 	// .menu__body
 	&__body {
 		flex: 1;
+		position: relative;
+    z-index: 1;
 		@media (max-width: em(1100)){
 			  flex: unset;
 				width: 100%;
@@ -323,8 +325,8 @@
 	}
 	// .menu__item
 	&__item {
-		position: relative;
-		z-index: 0;
+		// position: relative;
+		// z-index: 0;
 		@media (max-width: em(1100)){
 			  width: 100%;
 		}
@@ -459,12 +461,13 @@
 		@media (min-width:em(1101)){
 			position: fixed;
 			z-index: 9;
-			top: rem(50);
+			top: 0;
 			left: 0;
 			width: 100%;
-			padding-top: 39px;
+			padding-top: 100px;
+			background-color: #1A1A1A;
 			border-bottom: rem(1) solid rgba(109, 109, 109, 0.3);
-			transition: all .45s ease;
+			transition: all .3s ease-in-out;
 		}
 		opacity: 0;
 		pointer-events: none;
@@ -503,15 +506,32 @@
 		position: relative;
 		z-index: 2;
 	}
+	// .menu__sublist-systems
+	&__sublist-systems {
+		.view-all-link {
+			margin-top: unset;
+			grid-column: span 6;
+			@media (max-width: em(1200)){
+				grid-column: span 3;
+			}
+		}
+	}
+	// .menu__sublist-product
+	&__sublist-product {
+		.view-all-link {
+			grid-column: span 3;
+		}
+	}
 }
 
 // PRODUCT SUBMENU ========================================================
 .product-submenu {
-	padding-bottom: rem(100);
+	padding-bottom: rem(48);
 	display: grid;
 	grid-template-columns: minmax(100px, 300px) minmax(100px, 150px) minmax(100px, 250px);
 	justify-content: center;
 	column-gap: rem(40);
+	justify-items: center;
 
 	@media (max-width: em(1100)){
 		  display: none;
@@ -631,6 +651,9 @@
 	display: grid;
 	grid-template-columns: repeat(6, rem(170));
 	justify-content: center;
+	@media (min-width:em(101)){
+		  justify-items: center;
+	}
 
 		@media (max-width: em(1200)){
 			grid-template-columns: repeat(3, rem(170));
@@ -905,24 +928,55 @@
 
 	// .view-all-link (less than 1100px in Products and Systems sub-menu)
 	.view-all-link {
-		display: none; 
+		// display: none; 
+		display: flex;
+		align-items: center;
+		column-gap: rem(10);
+		@media (min-width:em(1101)){
+			margin-top: rem(35);
+			color: $blue-1E-F6;
+			padding: rem(5) rem(30);
+			height: rem(56);
+			width: fit-content;
+			font-weight: 700;
+			font-size: rem(12);
+			line-height: calc(16/12);
+			text-transform: uppercase;
+			border-radius: rem(16);
+			background-color: rgba(86, 141, 255, 0.02);
+			border: 1px solid #1E64F6;
+			backdrop-filter: blur(2.5px);
+			text-decoration: underline;
+			text-underline-offset: rem(4);
+			transition: all .3s ease;
+			&:hover {
+				background-color: $blue-1E-F6;
+				color: white;
+				img {
+					filter: invert(100%) sepia(6%) saturate(25%) hue-rotate(309deg) brightness(108%) contrast(108%);
+				}
+			}
+		}
+
+
+
 		@media (max-width: em(1100)){
 				font-size: rem(16);
 				text-transform: uppercase;
 				font-weight: 700;
 				margin-bottom: rem(25);
-				// margin-left: rem(25);
 				color: $white-ff;
 		
-				display: flex;
-				align-items: center;
-				column-gap: rem(10);
-		
-				img {
-					width: rem(12);
-					height: auto;
-					filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(84deg) brightness(105%) contrast(110%);
-				}
+		}
+		img {
+			width: rem(12);
+			height: auto;
+			filter: invert(49%) sepia(90%) saturate(2054%) hue-rotate(201deg) brightness(101%) contrast(101%);
+
+			@media (max-width: em(1100)){
+				filter: invert(100%) sepia(6%) saturate(0%) hue-rotate(84deg) brightness(105%) contrast(110%);
+				  
+			}
 		}
 	
 	}
