--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -513,6 +513,7 @@ address {
 	span {
     display: block;
     font-size: rem(50);
+    height: rem(32);
     font-weight: 300;
     line-height: 0.5;
     color: $black-00;
