--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -15,8 +15,6 @@
 		box-shadow: 0px 0px 1px 1px rgba(123, 148, 157, 0.50);
 	}
 	&._open-menu-sub {
-		// background-color: rgba(26, 26, 26, 1);
-		
 		&::before {
 			opacity: 1;
 			@media (max-width: em(1100)){
@@ -222,9 +220,9 @@
 		pointer-events: none;
 
 		position: absolute;
-		top: 0;
+		top: rem(15);
 		left: 0;
-		padding-top: rem(30);
+		padding-top: rem(15);
 		transition: all .3s ease;
 		span {
 			display: block;
